--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>This is a Heading 1</h1>
 <p>This is a paragraph.</p>
-<h1>This is another heading</h1>
+<h1>This is another heading.</h1>
 </body>
 </html>
