--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <title>Page Title</title>
 </head>
 <body>
-<h1>This is a Heading 1.</h1>
-<p>This is a paragraph.</p>
-<h1>This is another heading.</h1>
+<p>This is first paragraph.</p>
 </body>
 </html>
