--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Page Title</title>
 </head>
 <body>
-<p>This is first paragraph.</p>
+<p>This is the very first paragraph.</p>
 </body>
 </html>
