--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
 <title>Page Title</title>
 </head>
 <body>
-<p>This is the very first paragraph.</p>
-<h3>normal heading 3</h3>
-<h1>This is a Heading 1</h1>
-<p>This is a paragraph.</p>
-<h1>This is another heading.</h1>
-<p>Last paragraph</p>
+  <p> This is the main branch paragraph </p>
 </body>
 </html>
