--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <p> This is the main branch paragraph </p>
 	<p>This is feature-xyz branch paragraph</p>
+	<p>Confirm</p>
 </body>
 </html>
